# chip8_emu

./: .gitignore  CMakeLists.txt  README.md  debug.sh
src/: main.c
src/asm/: cpu.asm
